<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/desert_sand">

    <Button
        android:id="@+id/btNavItemsFromSpells"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:drawableEnd="@drawable/ic_baseline_business_center_24"
        android:drawableRight="@drawable/ic_baseline_business_center_24"
        android:text="@string/btNavItems"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#3F51B5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btNavNotesFromSpells"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:drawableEnd="@drawable/ic_baseline_menu_book_24"
        android:drawableRight="@drawable/ic_baseline_menu_book_24"
        android:text="@string/btNavNotes"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btNavItemsFromSpells"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btAddSpell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:drawableEnd="@drawable/ic_baseline_star_24"
        android:drawableRight="@drawable/ic_baseline_star_24"
        android:text="@string/btAddSpell"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btNavItemsFromSpells" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/big_padding"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbarSize="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAddSpell"
        tools:listitem="@layout/recyclerview_item" />


</androidx.constraintlayout.widget.ConstraintLayout>